fix layout bugs

--- a/src/css/categories.css
+++ b/src/css/categories.css
@@ -21,10 +21,11 @@
     cursor: pointer;
     overflow: hidden;
     box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.589);
+    
 }
 .cat-text:hover{
     backdrop-filter: blur(3px);
-    font-size: 1.4em;
+    font-size: 1.5em;
 }
 .cat-text{
     padding: 100%;
