--- a/src/css/contributors.css
+++ b/src/css/contributors.css
@@ -45,5 +45,5 @@
     
 }
 #contributors-main{
-    height: 100vh;
+    min-height: 100vh;
 }
